--- a/API/package.json
+++ b/API/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
+    "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
     "json-server": "^0.15.1"
   }
 }
